coffeescript in the browser lol

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 <body>
 
 <script type="text/javascript" src="./js/markdowntomla.js"></script>
+<script type="text/javascript" src="./js/coffeescript.js"></script>
 <!-- <script type="text/javascript" src="./js/jquery.js"></script> -->
 <!-- <script type="text/javascript" src="./js/jspdf.js"></script> -->
 <!-- <script type="text/javascript" src="./js/Deflate/adler32cs.js"></script> -->
 <!-- <script type="text/javascript" src="./js/FileSaver.js/FileSaver.js"></script> -->
 <!-- <script type="text/javascript" src="./js/Blob.js/BlobBuilder.js"></script> -->
-<script type="text/javascript">
-# browser
+<script type="text/coffeescript">
+console.log "coffeescript works!"
 if false
   blobStream = require 'blob-stream'
   stream = blobStream()
