pdf generation entirely in the browser! Wow!

--- a/index.html
+++ b/index.html
@@ -7,23 +7,63 @@
 </head>
 <body>
 
+<textarea id="content">
+author: Christian Genco
+instructor: Professor Elisa Farrell
+course: ENGL 1341
+date: 6 April 2015
+title: An Allegory of the Human Condition
+
+While researching texts like *Harry Potter* and *Curious George* written about **nineteenth century farming**, I found a few "reliable" authors who published books about the literature of nineteenth century farming, particularly agricultural journals, newspapers, pamphlets, and brochures. These authors often placed the farming literature they were studying into an historical context by discussing the important events in agriculture of the year in which the literature was published (see Demaree, for example). However, while these authors discuss journals, newspapers, pamphlets, and brochures, I could not find much discussion about another important source of farming knowledge: farming handbooks. My goal in this paper is to bring this source into the agricultural literature discussion by connecting three agricultural handbooks from the nineteenth century with nineteenth century agricultural history.
+
+# Heading 1
+
+## Heading 2
+
+### Heading 3
+
+#### Heading 4
+
+##### Heading 5
+
+To achieve this goal, I have organized my paper into four main sections, two of which have sub-sections. In the first section, I provide an account of three important events in nineteenth century agricultural history: population and technological changes, the distribution of scientific new knowledge, and farming's influence on education. In the second section, I discuss three nineteenth century farming handbooks in connection with the important events described in the first section. I end my paper with a third section that offers research questions that could be answered in future versions of this paper and conclude with a fourth section that discusses the importance of expanding this particular project. I also include an appendix after the Works Cited that contains images of the three handbooks I examined. Before I can begin the examination of the three handbooks, however, I need to provide an historical context in which the books were written, and it is to this that I now turn.
+
+By the 1860s, the need for this knowledge was strong enough to affect education. John Nicholson anticipated this effect in 1820 in the "Experiments" section of his book *The Farmer’s Assistant; Being a Digest of All That Relates to Agriculture and the Conducting of Rural Affairs; Alphabetically Arranged and Adapted for the United States*:
+
+
+> Perhaps it would be well, if some institution were devised, and supported at the expense of the State, which would be so organized as would tend most effectually to produce a due degree of emulation among Farmers, by rewards and honorary distinctions conferred by those who, by their successful experimental efforts and improvements, should render themselves duly entitled to them. (92)
+
+Here's my final paragraph.
+
+---
+
+# Works Cited
+
+Allen, R.L. *The American Farm Book; or Compend of American Agriculture; Being a Practical Treatise on Soils, Manures, Draining, Irrigation, Grasses, Grain, Roots, Fruits, Cotton, Tobacco, Sugar Cane, Rice, and Every Staple Product of the United States with the Best Methods of Planting, Cultivating, and Preparation for Market*. New York: Saxton, 1849. Print.
+
+Baker, Gladys L., Wayne D. Rasmussen, Vivian Wiser, and Jane M. Porter. *Century of Service: The First 100 Years of the United States Department of Agriculture*. Federal Government, 1996. Print.
+</textarea>
+<iframe id="preview"></iframe>
+
+<script type="text/javascript" src="./js/jquery.js"></script>
 <script type="text/javascript" src="./js/markdowntomla.js"></script>
 <script type="text/javascript" src="./js/coffeescript.js"></script>
-<!-- <script type="text/javascript" src="./js/jquery.js"></script> -->
 <!-- <script type="text/javascript" src="./js/jspdf.js"></script> -->
 <!-- <script type="text/javascript" src="./js/Deflate/adler32cs.js"></script> -->
 <!-- <script type="text/javascript" src="./js/FileSaver.js/FileSaver.js"></script> -->
 <!-- <script type="text/javascript" src="./js/Blob.js/BlobBuilder.js"></script> -->
 <script type="text/coffeescript">
 console.log "coffeescript works!"
-if false
-  blobStream = require 'blob-stream'
+$content = $("#content")
+$preview = $("#preview")
+
+window.refresh = ->
   stream = blobStream()
-  # content  = ""
-  # content  = extractMetadata(content)
-  # body     = content.body
-  # metadata = content.metadata
-  createDocument(body, metadata, stream)
+  content = $content.val()
+  content  = extractMetadata(content)
+  body     = content.body
+  metadata = content.metadata
+  createMLADocument(body, metadata, stream)
   stream.on 'finish', ->
     # get a blob you can do whatever you like with
     # blob = stream.toBlob('application/pdf')
@@ -31,7 +71,9 @@ if false
     # or get a blob URL for display in the browser
     url = stream.toBlobURL('application/pdf')
     console.log url
-    # iframe.src = url
+    $("#preview").attr('src', url)
+
+refresh()
 </script>
 </body>
 </html>
