--- a/index.html
+++ b/index.html
@@ -3,11 +3,39 @@
 <head>
   <title></title>
   <style type="text/css">
+    *{
+      margin: 0;
+      padding: 0;
+    }
+    #editor, #preview{
+      /*width: 49%;*/
+      /*height: 400px;*/
+    }
+
+    #editor {
+        margin: 0;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 50%;
+    }
+
+    #preview{
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 50%;
+      right: 0;
+      width: 50%;
+      height: 100vh;
+      border: 0;
+    }
   </style>
 </head>
 <body>
 
-<textarea id="content">
+<pre id="editor">
 author: Christian Genco
 instructor: Professor Elisa Farrell
 course: ENGL 1341
@@ -42,24 +70,37 @@ Here's my final paragraph.
 Allen, R.L. *The American Farm Book; or Compend of American Agriculture; Being a Practical Treatise on Soils, Manures, Draining, Irrigation, Grasses, Grain, Roots, Fruits, Cotton, Tobacco, Sugar Cane, Rice, and Every Staple Product of the United States with the Best Methods of Planting, Cultivating, and Preparation for Market*. New York: Saxton, 1849. Print.
 
 Baker, Gladys L., Wayne D. Rasmussen, Vivian Wiser, and Jane M. Porter. *Century of Service: The First 100 Years of the United States Department of Agriculture*. Federal Government, 1996. Print.
-</textarea>
+</pre>
 <iframe id="preview"></iframe>
 
 <script type="text/javascript" src="./js/jquery.js"></script>
 <script type="text/javascript" src="./js/markdowntomla.js"></script>
 <script type="text/javascript" src="./js/coffeescript.js"></script>
+<script type="text/javascript" src="./js/ace.js"></script>
+<script type="text/javascript" src="./js/ace.mode-markdown.js"></script>
+<script type="text/javascript" src="./js/ace.theme-textmate.js"></script>
 <!-- <script type="text/javascript" src="./js/jspdf.js"></script> -->
 <!-- <script type="text/javascript" src="./js/Deflate/adler32cs.js"></script> -->
 <!-- <script type="text/javascript" src="./js/FileSaver.js/FileSaver.js"></script> -->
 <!-- <script type="text/javascript" src="./js/Blob.js/BlobBuilder.js"></script> -->
 <script type="text/coffeescript">
 console.log "coffeescript works!"
-$content = $("#content")
 $preview = $("#preview")
 
+window.editor = ace.edit("editor")
+editor.setTheme("ace/theme/textmate")
+editor.getSession().setMode("ace/mode/markdown")
+editor.getSession().setUseWrapMode(true)
+editor.renderer.setShowPrintMargin(false)
+
+refreshTimer = null
+editor.getSession().on 'change', ->
+  clearTimeout(refreshTimer)
+  refreshTimer = setTimeout(refresh, 1000)
+
 window.refresh = ->
-  stream = blobStream()
-  content = $content.val()
+  stream   = blobStream()
+  content  = editor.getSession().getValue()
   content  = extractMetadata(content)
   body     = content.body
   metadata = content.metadata
