update sample essay

--- a/index.html
+++ b/index.html
@@ -40,9 +40,17 @@ author: Christian Genco
 instructor: Professor Elisa Farrell
 course: ENGL 1341
 date: 6 April 2015
-title: An Allegory of the Human Condition
+title: On MarkdownToMLA.com and the Human Condition
 
-While researching texts like *Harry Potter* and *Curious George* written about **nineteenth century farming**, I found a few "reliable" authors who published books about the literature of nineteenth century farming, particularly agricultural journals, newspapers, pamphlets, and brochures. These authors often placed the farming literature they were studying into an historical context by discussing the important events in agriculture of the year in which the literature was published (see Demaree, for example). However, while these authors discuss journals, newspapers, pamphlets, and brochures, I could not find much discussion about another important source of farming knowledge: farming handbooks. My goal in this paper is to bring this source into the agricultural literature discussion by connecting three agricultural handbooks from the nineteenth century with nineteenth century agricultural history.
+Hi! Welcome to MarkdownToMLA.com - a simple website with an even simpler purpose: making it less annoying to generate MLA-formatted documents and essays for school (or work, if you... write essays for work? Maybe you're an english teacher? I'm actually not sure if anyone actually uses MLA in the real world).
+
+The stuff on the left is editable, and automatically generates the PDF on the right, which can be downloaded and emailed to your teacher, or printed out, or whatever else you want to do with a PDF. Everything you write is automatically saved as soon as you pause typing, but it's still a good idea to copy and paste it somewhere else every once in a while as a backup. You can even use this website without being connected to the internet!
+
+The special format on the left is called Markdown. You can easily make things *italic* and **bold**, as well as quote important people:
+
+> Writing MLA-formatted essays is much easier with markdowntomla.com. I use it all the time when I write essays to foreign dictators, as well as to my wife when I need her to pick up something from the store on the way home (we're a very formal family). (Obama)
+
+Some teachers don't like you to use subheadings in a paper, but here's the standard way of doing that:
 
 # Heading 1
 
@@ -54,22 +62,25 @@ While researching texts like *Harry Potter* and *Curious George* written about *
 
 ##### Heading 5
 
-To achieve this goal, I have organized my paper into four main sections, two of which have sub-sections. In the first section, I provide an account of three important events in nineteenth century agricultural history: population and technological changes, the distribution of scientific new knowledge, and farming's influence on education. In the second section, I discuss three nineteenth century farming handbooks in connection with the important events described in the first section. I end my paper with a third section that offers research questions that could be answered in future versions of this paper and conclude with a fourth section that discusses the importance of expanding this particular project. I also include an appendix after the Works Cited that contains images of the three handbooks I examined. Before I can begin the examination of the three handbooks, however, I need to provide an historical context in which the books were written, and it is to this that I now turn.
+Need a page break? Just type three dashes on an empty line.
 
-By the 1860s, the need for this knowledge was strong enough to affect education. John Nicholson anticipated this effect in 1820 in the "Experiments" section of his book *The Farmer’s Assistant; Being a Digest of All That Relates to Agriculture and the Conducting of Rural Affairs; Alphabetically Arranged and Adapted for the United States*:
+---
 
+Whoa, so much more room on this page. There's two things left to cover: the special **author**, **instructor**, **course**, **date**, and **title** section at the top; and the work's cited page. The former is used for the MLA heading, numbering the pages, and naming your downloaded PDF. The later is pretty self explanatory (look at the markdown source code at the bottom of this essay).
 
-> Perhaps it would be well, if some institution were devised, and supported at the expense of the State, which would be so organized as would tend most effectually to produce a due degree of emulation among Farmers, by rewards and honorary distinctions conferred by those who, by their successful experimental efforts and improvements, should render themselves duly entitled to them. (92)
+For help generating those citations, check out easybib.com, bibme.org, and citationmachine.net. Be careful citing Wikipedia, but there's also a handy "cite this page" button on every page.
 
-Here's my final paragraph.
+If you have any suggestions or feedback for how this can be improved, send me a tweet @cgenco or contact me through my website at http://christian.gen.co (I also have a talk on there about how to go to college for free). Have fun writing essays :D
 
 ---
 
 # Works Cited
 
-Allen, R.L. *The American Farm Book; or Compend of American Agriculture; Being a Practical Treatise on Soils, Manures, Draining, Irrigation, Grasses, Grain, Roots, Fruits, Cotton, Tobacco, Sugar Cane, Rice, and Every Staple Product of the United States with the Best Methods of Planting, Cultivating, and Preparation for Market*. New York: Saxton, 1849. Print.
+Egan, Greg. *Permutation City*. New York: HarperPrism, 1994. Print.
 
-Baker, Gladys L., Wayne D. Rasmussen, Vivian Wiser, and Jane M. Porter. *Century of Service: The First 100 Years of the United States Department of Agriculture*. Federal Government, 1996. Print.
+Rowling, J. K., and Mary GrandPre. *Harry Potter and the Chamber of Secrets*. New York: Arthur A. Levine, 1999. Print.
+
+Wikipedia contributors. "Hacker News." Wikipedia, The Free Encyclopedia. Wikipedia, The Free Encyclopedia, 18 Mar. 2015. Web. 7 Apr. 2015.
 </pre>
 <iframe id="preview"></iframe>
 
