--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>MarkdowntoMLA.com</title>
   <style type="text/css">
     *{
       margin: 0;
