fix typo and rename template

--- a/template.html
+++ b/template.html
@@ -5,8 +5,8 @@
   <meta content="Markdown to MLA" name="og:site_name" />
   <meta property='og:type' name='og:type' content='website' />
   <meta property='og:title' name='og:title' content='Markdown to MLA' />
-  <meta property='description' name='description' content='Convert markdown to MLA formatted PDFs ' />
-  <meta property='og:description' name='og:description' content='Blog and projects of an internet micropreneur, software engineer, mustachian, and stage actor.' />
+  <meta property='description' name='description' content='Convert markdown to MLA formatted PDFs. Makes writing school papers much easier.' />
+  <meta property='og:description' name='og:description' content='Convert markdown to MLA formatted PDFs. Makes writing school papers much easier.' />
   <meta property='og:url' name='og:url' content='http://markdowntomla.com/' />
   <meta property='og:image' name='og:image' content='http://i.imgur.com/JwuUAy9.png' />
 
