changes I don't even know

--- a/template_markdowntoapa.html
+++ b/template_markdowntoapa.html
@@ -8,7 +8,7 @@
   <meta property='description' name='description' content='Convert markdown to APA formatted PDFs. Makes writing school papers much easier.' />
   <meta property='og:description' name='og:description' content='Convert markdown to APA formatted PDFs. Makes writing school papers much easier.' />
   <meta property='og:url' name='og:url' content='http://markdowntoapa.com/' />
-  <meta property='og:image' name='og:image' content='http://i.imgur.com/JwuUAy9.png' />
+  <meta property='og:image' name='og:image' content='http://i.imgur.com/7mgT3KE.png' />
 
   <style type="text/css">
     *{
